<resources>
    <string name="app_name" translatable="false">VinApp</string>

    <!-- Action Buttons -->
    <string name="action_filter">Filter</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>

    <!-- Labels -->
    <string name="label_bar_code">Barcode</string>
    <string name="label_new_wine">New Wine</string>
    <string name="label_name">Wine Name</string>
    <string name="label_producer">Producer</string>
    <string name="label_vintage">Vintage wine</string>
    <string name="label_alcohol_content">Alcohol Content</string>
    <string name="label_volume">Volume</string>
    <string name="label_city">Region</string>
    <string name="label_country">Country</string>
    <string name="label_rating">Rating</string>
    <string name="label_note">Note</string>
    <string name="label_importer">Importer</string>
    <string name="label_reserve">Reserve?</string>
    <string name="label_delete_note" translatable="false">delete_note</string>

    <string name="label_red_wine">Red</string>
    <string name="label_rose_wine">Rose</string>
    <string name="label_white_wine">White</string>
    <string name="label_sparkling_wine">Sparkling</string>
    <string name="label_other_wine">Other</string>

    <!-- Hints -->
    <string name="hint_name">Wine Name *</string>
    <string name="hint_producer">Producer *</string>
    <string name="hint_vintage">Vintage *</string>
    <string name="hint_alcohol_content">Alcohol Content</string>
    <string name="hint_volume">Volume</string>
    <string name="hint_reserve">Reserve *</string>
    <string name="hint_city">Region</string>
    <string name="hint_country">Country *</string>
    <string name="hint_barcode">Barcode</string>
    <string name="hint_rating">Rating *</string>
    <string name="hint_code_bar_scanner">Position the red line in the middle of the bar code.</string>
    <string name="hint_importer">Importer</string>
    <string name="hint_required_field">* required fields.</string>
    <string name="hint_choose_an_option">Choose an option below</string>
    <string name="hint_note_field">Enter a note&#8230;</string>
    <string name="hint_grape_field">Enter a grape name&#8230;</string>
    <string name="hint_image" translatable="false">wine_image</string>
    <string name="hint_add_note">Add note</string>

    <!-- Messages -->
    <string name="scan_not_found_message">Try again or create a new wine?</string>
    <string name="scan_error_message">Barcode couldn\'t be read.</string>
    <string name="camera_permission_denied_message">Permission is required to take photo.</string>
    <string name="camera_write_read_permission_denied_message">Permission is required to take, save and show photo.</string>
    <string name="write_external_storage_permission_denied_message">Permission is required to save photo.</string>
    <string name="read_external_storage_permission_denied_message">Permission is required to show photo.</string>
    <string name="delete_wine_message">Are you sure you want to delete this wine?</string>
    <string name="delete_note_message">Are you sure you want to delete this note?</string>
    <string name="no_wine_message">There are no registered wines!</string>
    <string name="required_field_message">This field is required.</string>
    <string name="vintage_field_required_message">Vintage between 1900 and\u0020</string>
    <string name="check_message">Check required fields.</string>
    <string name="alcohol_content_field_message">Alcohol content between 0 and 100</string>
    <string name="not_found_message">Data not found!</string>

    <!-- Buttons -->
    <string name="button_open_camera">Open camera</string>
    <string name="button_open_gallery">Open gallery</string>
    <string name="button_add_new_grape">Add new grape</string>
    <string name="dialog_button_cancel">Cancel</string>
    <string name="dialog_button_create">Create</string>
    <string name="dialog_button_try_again">Try again</string>
    <string name="dialog_button_delete">Delete</string>
    <string name="dialog_button_yes">Yes</string>
    <string name="dialog_button_no">No</string>
    <string name="dialog_button_allow">Allow</string>

    <!-- Titles -->
    <string name="new_note_title">New Note</string>
    <string name="new_grape_title">New Grape</string>

    <string name="scan_not_found_title">Barcode not found!</string>
    <string name="scan_error_title">Scan error!</string>
    <string name="delete_wine_title">Delete Wine</string>
    <string name="delete_note_title">Delete Note</string>
    <string name="permission_alert_title">Permission alert</string>
    <string name="label_default_grape" translatable="false">Cabernet Sauvignon</string>
    <string name="no_notes_message">No notes</string>
    <string name="mobile_settings_message">Go to the mobile settings and activate the permissions.</string>

</resources>
