<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="16dp"
    android:layout_marginBottom="16dp"
    android:background="@drawable/border"
    android:padding="16dp">

    <TextView
        android:id="@+id/labelTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|center_vertical"
        android:paddingBottom="16dp"
        android:text="@string/hint_choose_an_option"
        android:textColor="@color/colorPrimaryText"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/cameraBtn"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="16dp"
        android:text="@string/button_open_camera"
        app:layout_constraintEnd_toEndOf="@+id/labelTxt"
        app:layout_constraintStart_toStartOf="@+id/labelTxt"
        app:layout_constraintTop_toBottomOf="@+id/labelTxt" />

    <Button
        android:id="@+id/galleryBtn"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="16dp"
        android:text="@string/button_open_gallery"
        app:layout_constraintEnd_toEndOf="@+id/cameraBtn"
        app:layout_constraintStart_toStartOf="@+id/cameraBtn"
        app:layout_constraintTop_toBottomOf="@+id/cameraBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>