<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingLeft="16dp"
        android:paddingEnd="16dp"
        android:paddingRight="16dp"
        app:errorEnabled="true"
        app:hintAnimationEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:startIconContentDescription="wine name"
        app:startIconDrawable="@drawable/ic_local_bar_black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTxt_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/hint_name"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_producer"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingLeft="16dp"
        android:paddingEnd="16dp"
        android:paddingRight="16dp"
        app:errorEnabled="true"
        app:hintAnimationEnabled="true"
        app:layout_constraintEnd_toEndOf="@+id/input_layout_name"
        app:layout_constraintStart_toStartOf="@+id/input_layout_name"
        app:layout_constraintTop_toBottomOf="@+id/input_layout_name"
        app:startIconContentDescription="producer"
        app:startIconDrawable="@drawable/ic_person_outline_black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTxt_producer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/hint_producer"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_vintage_alcohol"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingLeft="16dp"
        android:paddingEnd="16dp"
        android:paddingRight="16dp"
        app:errorEnabled="true"
        app:hintAnimationEnabled="true"
        app:layout_constraintEnd_toStartOf="@+id/input_layout_alcohol_content"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_layout_producer"
        app:startIconContentDescription="vintage alcohol"
        app:startIconDrawable="@drawable/ic_date_range_black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTxt_vintage_alcohol"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/hint_vintage"
            android:inputType="number"
            android:maxLength="4" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_alcohol_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingLeft="16dp"
        android:paddingEnd="16dp"
        android:paddingRight="16dp"
        app:errorEnabled="true"
        app:hintAnimationEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/input_layout_vintage_alcohol"
        app:layout_constraintTop_toBottomOf="@+id/input_layout_producer"
        app:startIconContentDescription="alcohol content"
        app:startIconDrawable="@drawable/ic_all_inclusive_black"
        app:suffixText="%">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTxt_alcohol_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/hint_alcohol_content"
            android:inputType="numberDecimal"
            android:maxLength="5" />

    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>